--- a/Rules
+++ b/Rules
@@ -1,14 +1,20 @@
-A. General Composure:
-  1. Be nice in chat, harrasment, swearing and racism is not tolerated
-  2. Spam is not allowed
-  3. Adverstising for other servers or services is not allowed
-    a. Promoting Youtube, Twitch or any other social media should go on the forums
-    b. Sharing an IP of an server may be given using /msg.
+These rules apply to all Hezé Network services and Players
+
+1. General Composure:
+  a. Be nice in chat, harrasment, swearing and racism is not tolerated
+  b. Use common sence.
+  c. Spam is not allowed.
+  d. Adverstising for other servers or services is not allowed
+    1. Promoting Youtube, Twitch or any other social media should go on the forums
+    2. Sharing an IP of an server may be given using /msg.
+  e. Linking to Objectionable material, which includes but is not limited to pornography, "shock sites", viruses, phishing sites and hate groups is prohibited.\
+  f. Do not encourage any player to break the rules.
+  d. If you are not a staff member, don't impersonate, or claim to be staff of the Hezé Network
   
-B. Forum behaviour
+2. Forum behaviour
   [To be added]
   
-C. Modified clients
-  1. The usage of modified minecraft clients that give an advantage over other players is not allowed
-    a. 
-    b. Exeptions on this rule are: Optifine, Shaders and armour status.
+3. Modified clients
+  A. The usage of modified minecraft clients that give an advantage over other players is not allowed
+    1. 
+    2. Exeptions on this rule are: Optifine, Shaders and armour status.
